@@ -1,3 +1,6 @@
+Changes from FRESA.CAD 3.4.7 to FRESA.CAD version 3.4.8
+	-ILLA Bootstraping attributes
+	-FRESA.CAD bug fixed
 Changes from FRESA.CAD 3.4.6 to FRESA.CAD version 3.4.7
 	-ILLA Bootstraping bug corrected
 Changes from FRESA.CAD 3.4.5 to FRESA.CAD version 3.4.6
